# ficop

./: .gitignore  README.md  dummy-initial.ficop-preset.json  dummy-refine.ficop-preset.json  ficop-preset.ficop-preset.json  ficop.py  picolog_run.txt  pyproject.toml
cua/ficop/: __init__.py  dummy.py  main.py  optimizer.py
cua/logger/: __init__.py  logger.py
cua/logger/oscilloscope/: __init__.py  oscilloscope.py
cua/logger/picolog/: __init__.py  pico_logger.py
cua/scservo/: debug.py  servo.py
examples/: ficop_dummy_example.py  oscilloscope_example.py  picolog_example.py  scservo_debug_console.py  scservo_example.py
main/: dummy.py
originals/: pico_multichannel.py  pico_single.py  pico_streaming.py
