[project]
name = "ficop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "picosdk>=1.1",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
    "pyvisa>=1.16.0",
    "pyvisa-py>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cua"]
